<resources>
    <string name="app_name">AIS model</string>
    <string name="lines_count">Lines count = </string>
    <string name="time_acceleration">Time acceleration = </string>
    <string name="model_time">Model time = </string>
    <string name="queue_size">Queue size = </string>
    <string name="beta">β (duration) = </string>
    <string name="lambda">λ (time) = </string>
    <string name="next">NEXT</string>
    <string name="error_value">Enter values must be double</string>
    <string name="error_value_int">Enter values must be integer</string>
    <string name="error_toast">Check red marks!</string>
    <string name="efficient">Efficient: </string>
    <string name="current_time">Current time: </string>
</resources>