<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.screen.PrepareFragment"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_acceleration_layout"
            android:hint="@string/time_acceleration"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_acceleration"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model_time_layout"
            android:hint="@string/model_time"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_time"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lines_count_layout"
            android:hint="@string/lines_count"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lines_count"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/queue_size_layout"
            android:hint="@string/queue_size"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/queue_size"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/beta_layout"
            android:hint="@string/beta"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/beta"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lambda_layout"
            android:hint="@string/lambda"
            style="@style/CoefficientLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lambda"
                style="@style/CoefficientEditText"
                tools:ignore="SpeakableTextPresentCheck"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            />

    </LinearLayout>

</ScrollView>